@@ -2,8 +2,8 @@ package org.scribe.services;
 
 import javax.crypto.*;
 import javax.crypto.spec.*;
+import javax.xml.bind.DatatypeConverter;
 
-import org.apache.commons.codec.binary.*;
 import org.scribe.exceptions.*;
 import org.scribe.utils.*;
 
@@ -44,7 +44,8 @@ public class HMACSha1SignatureService implements SignatureService
     Mac mac = Mac.getInstance(HMAC_SHA1);
     mac.init(key);
     byte[] bytes = mac.doFinal(toSign.getBytes(UTF8));
-    return new String(Base64.encodeBase64(bytes)).replace(CARRIAGE_RETURN, EMPTY_STRING);
+
+    return DatatypeConverter.printBase64Binary(bytes);
   }
 
   /**
